--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "path-to-regexp": "2.4.0",
     "vue": "2.6.10",
     "vue-count-to": "^1.0.13",
+    "vue-i18n": "^7.3.2",
     "vue-router": "3.0.6",
     "vuex": "3.1.0"
   },
